Fix the filter list spacing

--- a/assets/stylesheets/src/structures/_filter.sass
+++ b/assets/stylesheets/src/structures/_filter.sass
@@ -30,7 +30,6 @@
 
 .filter-item
   @extend .di
-  @extend .mbs
   @extend .mrs
 
 // ----- List ----- //
@@ -47,6 +46,8 @@
 .filter-link
   @extend .bdr
   @extend .dib
+  @extend .mbs
+  @extend .mts
   @extend .tch
   +transition(border-color 0.3s ease-in-out)
   border-radius: 40px
